--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="nav">
         <a href="#" class="active">Home</a>
         <a href="#">About</a>
-        <a href="#">Services</a>
+        <a href="Map.html">Demo</a>
         <a href="#">Contact</a>
       </nav>
     </div>
