--- a/index.html
+++ b/index.html
@@ -1,27 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Back Pocket Solutions</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="rain.js"></script>
-  </head>
-  <body class="rain-toggle">
-    <div class="header">
-      <div class="logo">
-        <img src="logo.png" alt="Logo">
-      </div>
-      <nav class="nav">
-        <a href="#" class="active">Home</a>
-        <a href="#">About</a>
-        <a href="Map.html">Demo</a>
-        <a href="#">Contact</a>
-      </nav>
-    </div>
-    <div class="landing">
-      <h2>Welcome to Back Pocket Solutions, LLC</h2>
-      <p class="subtitle">Creating Custom Solutions For Any Business</p>
-      <div id="binary-rain"></div>
-    </div>
-  </body>
+<head>
+    <title>BackPocket Solutions, LLC</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo-container">
+            <img src="logo.png" alt="BackPocket Solutions, LLC Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="how_it_works.html">How it Works</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <h1>Introducing BackPocket Roofing App</h1>
+            <p>A custom-built one-stop application targeted to help any roofing business.</p>
+            <a href="how_it_works.html" class="cta">Learn how it works</a>
+        </section>
+        <section class="features">
+            <h2>Our Key Features</h2>
+            <div class="grid">
+                <div class="grid-item">
+                    <img src="customizable.png" alt="Customizable App">
+                    <h3>Customizable</h3>
+                    <p>At BackPocket, we understand that every company is unique. That's why we offer a completely customizable user interface, that we build for your and your companie's needs. Tailor your digital workspace to your exact needs with BackPocket.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="hail_data.png" alt="Hail Data">
+                    <h3>Hail Data</h3>
+                    <p>Gain instant access to the latest hail damage information for any location in the US. Stay ahead of the competition and seize opportunities to provide timely roofing solutions. Maximize your business potential with our powerful lead-generation tool tailored specifically for roofers.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="google_maps.png" alt="Google Maps Integration">
+                    <h3>Google Maps Integration</h3>
+                    <p>Navigate clients effortlessly with our app's seamless integration with Google Maps. Optimize travel time, plan routes, and enjoy hassle-free journeys. Simplify client visits with our unparalleled integration, leaving navigation challenges behind.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="lead_tracking.png" alt="Lead Tracking">
+                    <h3>Lead Tracking</h3>
+                    <p>Our app combines seamless communication and efficient lead tracking. Connect with clients easily through integrated calling, emailing, and texting. Streamline lead management for effective follow-up and nurturing. Drive conversions and build relationships effortlessly with our all-in-one solution.</p>
+                </div>
+            </div>
+        </section>
+            <section class="contact">
+                <h2>Contact Us</h2>
+                <div class="contact-items">
+                    <div class="contact-item">
+                        <a href="tel:832-349-4570" class="cta cta-contact">Call</a>
+                    </div>
+                    <div class="contact-item">
+                        <a href="mailto:matthew@backpocketsolution.com" class="cta cta-contact">Email</a>
+                    </div>
+                    <div class="contact-item">
+                        <a href="contact_us.html" class="cta cta-contact">Contact Us Page</a>
+                    </div>
+                </div>
+            </section>
+    </main>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2023 BackPocket Solutions, LLC. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
