--- a/FAQ.html
+++ b/FAQ.html
@@ -3,6 +3,8 @@
 <head>
     <title>Frequently Asked Questions</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -10,7 +12,8 @@
             <img src="logo.png" alt="BackPocket Solutions, LLC Logo">
         </div>
         <nav>
-            <ul>
+            <button class="hamburger-menu">☰</button> <!-- Unicode for simplicity. You can replace with an SVG or font icon if desired. -->
+            <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="how_it_works.html">How it Works</a></li>
