--- a/how_it_works.html
+++ b/how_it_works.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
+    <meta charset="UTF-8">
 </head>
 <body id="how-it-works-page">
     <header>
